syntax="proto3";
package NUgc.NSecurity;

// Token aad for AES GCM algorithm. Allows fast rejection of malformed and outdated tokens.
//
message TTokenAad {
    uint64 CreationTimeMs = 1;  // Timestamp in milliseconds when token was created
    uint64 TtlMs = 2;           // Token ttl in milliseconds
}
